# emma

./: Cargo.toml  README.md
client/: Cargo.toml  modules.toml
client/src/: main.rs  server.rs
core/: Cargo.toml
core/src/: lib.rs  module.rs  util.rs
core/src/primitives/: mod.rs  request.rs  response.rs
modules/well-known/: Cargo.toml
modules/well-known/src/: lib.rs
